<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" tools:context="com.horizon.demo.horizondemo.ExchangeRateFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exchangeRateMsgTextView"
        android:text="@string/exchangeRateMsg"
        android:textSize="15sp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exchangeRateDateTextView"
        android:textSize="15sp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_alignTop="@+id/exchangeRateMsgTextView"
        android:layout_toRightOf="@+id/exchangeRateMsgTextView"
        android:layout_toEndOf="@+id/exchangeRateMsgTextView"
        android:layout_marginLeft="5dp"
        android:text="@string/tempCurrentDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exchangeRateDirectionTextView"
        android:text="@string/exchangeRateMsg2"
        android:textSize="20sp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_below="@+id/exchangeRateMsgTextView"
        android:layout_alignStart="@+id/exchangeRateMsgTextView"
        android:layout_alignParentLeft="true" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/exchangeRateTextView"
        android:text="@string/tempExchangeRate"
        android:textSize="20sp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_toRightOf="@+id/exchangeRateDirectionTextView"
        android:layout_toEndOf="@+id/exchangeRateDirectionTextView"
        android:layout_alignTop="@+id/exchangeRateDirectionTextView"
        android:layout_marginLeft="5dp" />

</RelativeLayout>
