<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.horizon.demo.horizondemo.MainActivity"
    android:background="#ffffffff">

    <ImageView
        android:id="@+id/loadingLogoView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/loadingLogoView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:progressTint="@color/horizonGreen" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeMessage"
        android:textAlignment="center"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loadingMessage"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000" />

</RelativeLayout>
